--- a/DAY02_0409/css/mystyle.css
+++ b/DAY02_0409/css/mystyle.css
@@ -5,3 +5,5 @@ p {background-color: green; font-size: 40px; border:}
 * {color:red;}
 /* 클래스 속성 값이 동일한 부분에 적용. p태그 아니어도 됨*/
 .para{background-color: cyan;}
+
+/* 테이블의 행(row) 요소 선택자 */
